fixed whitespace

--- a/src/components/allcoursespage.css
+++ b/src/components/allcoursespage.css
@@ -179,7 +179,9 @@
 .scroll-down {
     position: absolute;
     bottom: 50px;
-    left: 50%;
+    /* left: 50%; */
+    text-align: center;
+    width: 100%;
     z-index: 15;
 }
 
@@ -187,6 +189,7 @@
     position: relative;
     z-index: 15;
     border: none;
+    text-align: center;
     background-color: rgba(100, 148, 237, 0.1);
 }
 
